ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.6.10
    • Affects Version/s: 2.6.9
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Hide

      The simplest way to repro was to set the oplogSize high enough (smallfiles true helps)

      Show
      The simplest way to repro was to set the oplogSize high enough (smallfiles true helps)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This looks like another regression of SERVER-9818 on 2.6. It may also be related to SERVER-15389.

      Tested version were:

      1. 2.6.4
      2. 2.6.8
      3. 2.6.9-rc0
      4. 2.6.2
      5. 2.6.0
      2015-03-18T18:01:55.364+0000 [initandlisten] waiting for connections on port 10001
      2015-03-18T18:01:55.365+0000 [websvr] ERROR: socket 2057 is higher than 1023; not supported
      2015-03-18T18:01:55.385+0000 [initandlisten] connection accepted from 10.126.10.236:36340 #1 (1 connection now open)
      2015-03-18T18:01:55.385+0000 [rsStart] replSet I am luu437p:10001
      2015-03-18T18:01:55.385+0000 [conn1] end connection 10.126.10.236:36340 (0 connections now open)
      2015-03-18T18:01:55.399+0000 [rsStart] replSet STARTUP2
      2015-03-18T18:01:55.400+0000 [rsSync] replSet SECONDARY
      2015-03-18T18:01:55.400+0000 [rsMgr] replSet info electSelf 0
      2015-03-18T18:01:56.401+0000 [rsMgr] replSet PRIMARY
      

      My repro did not cause the server to fail to launch as the error was reported on the REST interface.

      However, the original source did report a failure to launch of the mongod process at lease once:

      2015-03-07T13:51:51.441+0100 [initandlisten] ERROR: socket 1088 is higher than 1023; not supported
      2015-03-07T13:51:51.441+0100 [initandlisten] now exiting
      2015-03-07T13:51:51.441+0100 [initandlisten] dbexit:
      

      A subsequent restart allowed the process to start.

            Assignee:
            Kaloian Manassiev
            Reporter:
            James O'Leary
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: