SERVER-17653 Early allocate port for the HTTP interface